test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_name.rs
use clapi::macros::*;

#[command]
#[option(x, name=123)]
fn app(x: i64){}

fn main(){}