test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_name.stderr
error: custom attribute panicked
 --> $DIR/invalid_option_name.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: option `name` must be a string literal
